--- a/aero-sensor-broker/app/settings/Settings.toml
+++ b/aero-sensor-broker/app/settings/Settings.toml
@@ -1,5 +1,5 @@
 [influxdb]
-url = "http://localhost:8086"
+url = "http://influxdb:80"
 bucket = "sensor_data"
 org = "influxdata"
 auth_token = "token"
